[package]
name = "omobaf"
version = "0.1.0"
edition = "2021"
description = "Open MOBA Frontend - A fake game client for testing omobab backend"
authors = ["Open MOBA Team"]

# 隱藏所有編譯器警告
[lints.rust]
warnings = "allow"

[dependencies]
# MQTT client
rumqttc = "0.24"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Configuration
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Math and utilities
vek = "0.16"
rand = "0.8"

# Error handling
anyhow = "1.0"

# Terminal colors and control
colored = "2.1"
crossterm = "0.28"

# Windows console API
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "handleapi", "processenv"] }
